# Loto

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  data.js  docker-compose.yml  hướng dẫn.txt  index.html  main.py  nginx.conf  project_memo.md  tickets - old.json  tickets.json  tickets_ex.json
generator/: data.js  generator.html  guild generator.txt  index.html  main.py
src/: handlers.rs  main.rs  model.rs  ws.rs
static/: admin.html  index.html
static/css/: style.css
static/js/: actions.js  main.js  state.js  ui.js  ws.js
