[package]
name = "loto-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3"
futures = "0.3"
dashmap = "6.1.0"
rand = "0.9.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
bcrypt = "0.18.0"
dotenvy = "0.15"